<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard_teleop</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for teleoperation using keyboard input.</description>
  <maintainer email="s23c1114qb@s.chibakoudai.jp">Kenta Hirach</maintainer>
  <license>Apache-2.0</license>
  <license>MIT (for test files)</license>
  <build_depend>ament_python</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sshkeyboard</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
